--- a/isbn.html
+++ b/isbn.html
@@ -17,7 +17,7 @@
       background-color: #F0E7E2;
     }
 
- #logo {
+    #logo {
       position: absolute;
       top: 10px;
       left: 10px;
@@ -53,21 +53,9 @@
       cursor: pointer;
     }
 
-    button2 {
-      padding: 10px 20px;
-      font-family: Judson;
-      font-size: 1.5em;
-      border: none;
-      background-color: #727a6b;
-      color: white;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-
     #book-info {
-      margin-top: 40px; /* Adds space to move it lower */
-      font-size: 1.2em;
+      margin-top: 40px; 
+      font-size: 1.5em;
       color: black;
       text-align: center;
       white-space: pre-wrap;
@@ -82,48 +70,34 @@
       white-space: pre-wrap;
       max-width: 80%;
     }
-
   </style>
 </head>
 <body>
 
   <img id="logo" src="logo.png" alt="Logo">
 
-
   <h1>ShelfSwap</h1>
 
   <div id="input-container">
-    <!-- Input field for ISBN and button to get book data -->
     <input type="text" id="isbn-input" placeholder="Enter ISBN" />
     <button id="lookup-button">Lookup Book</button>
-    <button2 id="add-book">Add Book</button2>
+    <button id="add-book">Add Book</button>
   </div>
 
   <div id="book-info"></div>
   <div id="book-description"></div>
 
   <script>
-    //function to look up book details from Google Books API using ISBN
+    // Function to look up book details from Google Books API using ISBN
     async function lookupBook(isbn) {
-      // Create the API request URL using the ISBN
       const apiUrl = `https://www.googleapis.com/books/v1/volumes?q=isbn:${isbn}`;
-
       try {
-        //make the API request
         const response = await fetch(apiUrl);
         const data = await response.json();
 
-        //check if the book was found
         if (data.items && data.items.length > 0) {
-          // Get book details
           const book = data.items[0].volumeInfo;
-          
-          //display book title and author
-          document.getElementById("book-info").textContent = `Title: ${book.title}\nAuthor: ${book.authors?.join(", ")}`;
           document.getElementById("book-info").innerHTML = `Title: ${book.title}<br>Author: ${book.authors?.join(", ")}`;
-
-          
-          //display the book description
           const description = book.description ? book.description : "No description available.";
           document.getElementById("book-description").textContent = `Description:\n${description}`;
         } else {
@@ -131,26 +105,27 @@
           document.getElementById("book-description").textContent = "";
         }
       } catch (error) {
-        //handle any errors from the API request
         console.error("Error fetching book details:", error);
         document.getElementById("book-info").textContent = "Error";
         document.getElementById("book-description").textContent = "";
       }
     }
 
-    //event listener for "Lookup Book" button
+    // Event listener for "Lookup Book" button
     document.getElementById("lookup-button").addEventListener("click", function() {
-      // Get the ISBN code entered by the user
       const isbn = document.getElementById("isbn-input").value.trim();
-
-      //if user entered an ISBN, look up the book
       if (isbn) {
         lookupBook(isbn);
       } else {
-        // If the user didn't enter an ISBN, show an error message
         document.getElementById("book-info").textContent = "Enter a valid ISBN.";
         document.getElementById("book-description").textContent = "";
       }
+    });
+
+    // Event listener for "Add Book" button
+    document.getElementById("add-book").addEventListener("click", function() {
+      const figmaURL = "https://www.figma.com/design/1VLzPyi5XSCS7t0tRaw9vu/Untitled?node-id=0-1&t=ZRQQ8X2DkCXkYlhK-1"; 
+      window.location.href = figmaURL;
     });
   </script>
 </body>
