--- a/isbn.html
+++ b/isbn.html
@@ -124,7 +124,7 @@
 
     // Event listener for "Add Book" button
     document.getElementById("add-book").addEventListener("click", function() {
-      const figmaURL = "https://www.figma.com/design/1VLzPyi5XSCS7t0tRaw9vu/Untitled?node-id=0-1&t=ZRQQ8X2DkCXkYlhK-1"; 
+      const figmaURL = "https://www.figma.com/proto/1VLzPyi5XSCS7t0tRaw9vu/Untitled?node-id=48-268&p=f&t=ZRQQ8X2DkCXkYlhK-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A3&show-proto-sidebar=1"; 
       window.location.href = figmaURL;
     });
   </script>
