--- a/isbn.html
+++ b/isbn.html
@@ -38,8 +38,6 @@
       font-size: 1.5em;
       width: 100%;
       margin-bottom: 10px;
-      border: 2px solid #0000;
-      border-radius: 5px;
     }
 
     button {
@@ -93,10 +91,10 @@
       const apiUrl = `https://www.googleapis.com/books/v1/volumes?q=isbn:${isbn}`;
       try {
         const response = await fetch(apiUrl);
-        const data = await response.json();
+        const bookData = await response.json();
 
-        if (data.items && data.items.length > 0) {
-          const book = data.items[0].volumeInfo;
+        if (bookData.items && bookData.items.length > 0) {
+          const book = bookData.items[0].volumeInfo;
           document.getElementById("book-info").innerHTML = `Title: ${book.title}<br>Author: ${book.authors?.join(", ")}`;
           const description = book.description ? book.description : "No description available";
           document.getElementById("book-description").textContent = `Description:\n${description}`;
@@ -105,7 +103,7 @@
           document.getElementById("book-description").textContent = "";
         }
       } catch (error) {
-        console.error("Error fetching book details:", error);
+        console.error("Error getting book details:", error);
         document.getElementById("book-info").textContent = "Error";
         document.getElementById("book-description").textContent = "";
       }
